--- a/src/integration-test/resources/application.yml
+++ b/src/integration-test/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  profiles:
+    active:
+    - itest
   jpa:
     hibernate:
       ddl-auto: none
@@ -11,4 +14,3 @@ spring:
 logging:
   level:
     root: info
-    liquibase: error
