--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,19 @@
         <java.version>17</java.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
+        <exception-handling-starter.version>0.0.1-SNAPSHOT</exception-handling-starter.version>
     </properties>
+
+    <repositories>
+        <repository>
+            <id>modsen-exception-handling-starter</id>
+            <url>https://raw.github.com/arvisit/modsen-exception-handling-starter/artifact</url>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
@@ -41,6 +53,11 @@
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>by.arvisit.modsen-lib-app</groupId>
+            <artifactId>exception-handling-starter</artifactId>
+            <version>${exception-handling-starter.version}</version>
         </dependency>
 
         <dependency>
