--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-bootstrap</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-netflix-eureka-client</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.postgresql</groupId>
