--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <mapstruct.version>1.5.5.Final</mapstruct.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <exception-handling-starter.version>0.0.1-SNAPSHOT</exception-handling-starter.version>
+        <inner-filter-starter.version>0.0.1-SNAPSHOT</inner-filter-starter.version>
         <spring-cloud.version>2023.0.0</spring-cloud.version>
         <wiremock.version>3.3.1</wiremock.version>
         <jetty.version>11.0.18</jetty.version>
@@ -30,6 +31,14 @@
         <repository>
             <id>modsen-exception-handling-starter</id>
             <url>https://raw.github.com/arvisit/modsen-exception-handling-starter/artifact</url>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>modsen-inner-filter-starter</id>
+            <url>https://raw.github.com/arvisit/modsen-inner-filter-starter/artifact</url>
             <snapshots>
                 <enabled>true</enabled>
                 <updatePolicy>always</updatePolicy>
@@ -81,6 +90,11 @@
             <groupId>by.arvisit.modsen-lib-app</groupId>
             <artifactId>exception-handling-starter</artifactId>
             <version>${exception-handling-starter.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>by.arvisit.modsen-lib-app</groupId>
+            <artifactId>inner-filter-starter</artifactId>
+            <version>${inner-filter-starter.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
