--- a/src/integration-test/resources/application.yml
+++ b/src/integration-test/resources/application.yml
@@ -7,6 +7,14 @@ spring:
   jackson:
     deserialization:
       fail-on-unknown-properties: true
+  security:
+    cors:
+      allowedOrigin: ${CORS_ALLOWED_ORIGIN}
+      allowedMethod: ${CORS_ALLOWED_METHOD}
+      allowedHeader: ${CORS_ALLOWED_HEADER}
+  settings:
+    modsen-security-service:
+      uri: http://localhost:8480/api/v1/users
 
 logging:
   level:
@@ -14,4 +22,7 @@ logging:
 
 exception:
   handling:
+    include: true
+security:
+  inner-filter:
     include: true
