--- a/src/integration-test/resources/application.yml
+++ b/src/integration-test/resources/application.yml
@@ -15,6 +15,8 @@ spring:
   settings:
     modsen-security-service:
       uri: http://localhost:8480/api/v1/users
+    modsen-library-service:
+      uri: http://localhost:8480/api/v1/books
 
 logging:
   level:
