--- a/src/integration-test/resources/application.yml
+++ b/src/integration-test/resources/application.yml
@@ -16,7 +16,7 @@ spring:
     modsen-security-service:
       uri: http://localhost:8480/api/v1/users
     modsen-library-service:
-      uri: http://localhost:8480/api/v1/books
+      uri: http://localhost:8480/api/v1/library/books
 
 logging:
   level:
